Fixing layout issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -184,7 +184,7 @@
   }
   .zx9__image{
     max-width: unset;
-    width: 24rem;
+    width: 24.8rem;
     margin: 6rem 0 -1rem 7.34rem;
   }
   .zx9__content{
